--- a/styles/_phone.scss
+++ b/styles/_phone.scss
@@ -124,7 +124,7 @@
       position: relative;
       display: block;
       align-self: center;
-      width: 100%;
+      width: 90%;
       padding-bottom: 1.93rem;
     }
     div {
@@ -134,7 +134,7 @@
       }
       p {
         width: 90%;
-        padding: 0 $padding-left-second 3.86rem;
+        padding: 0 0 3.86rem 1.14rem;
         font-family: $menu-font;
         font-size: 1rem;
         font-weight: 300;
